# kyma-knowledge-mcp

./: .env.example  .gitignore  README.md  architecture.md  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: install-kyma-knowledge-mcp.md
.claude/skills/triage-kyma-doc-sources/: SKILL.md
.github/: dependabot.yml
.github/workflows/: build-and-publish-index.yaml  eval.yml  pull-all-checks-passed.yaml  pull-lint-code.yaml  pull-lint-pr-title.yaml  pull-lint-workflows.yaml  pull-tests.yaml
docs/superpowers/plans/: 2026-05-12-mcp-eval-framework.md
docs/superpowers/specs/: 2026-05-12-mcp-eval-framework-design.md
eval-report/: index.html
kyma_companion_mcp/: config.py  local_rag_client.py  rag_client.py  server.py
kyma_knowledge_mcp/: __init__.py  build_index.py  config.py  local_rag_client.py  main.py  server.py
kyma_knowledge_mcp/indexing/: docs_sources.json  excluded_sources.json  fetcher.py  indexer.py
scripts/: check_missing_sources.py  check_source_drift.py
src/: config.py  main.py  rag_client.py  server.py
tests/: test_config.py  test_rag_client.py  test_server.py
tests/eval/: run_consistency_check.py  run_eval.py  run_tests.py  system_prompt.md
tests/eval/cases/: contributor_docs.yaml  user_docs.yaml
tests/eval/features/: 01_bitnami_role_missing.feature  02_bitnami_wrong_rbac.feature  03_busybox_no_kubectl_binary.feature  04_k8s_improper_storage.feature  05_k8s_incorrect_liveness.feature  06_k8s_wrong_svc_labels.feature  08_kyma_app_syntax_err.feature  10_kyma_function_syntax_error.feature  11_kyma_function_no_replicas.feature  12_kyma_subscription_sink.feature  13_kyma_subscription_source.feature  14_kyma_subscription_sink_url.feature  15_nginx_oom.feature  16_nginx_wrong_image.feature  19_question_what_is_kyma.feature  20_question_kyma_regions.feature  21_question_add_module.feature  22_question_kyma_modules.feature  23_question_use_istio.feature  24_question_expose_endpoint.feature  25_question_hyperscalers.feature  26_question_cloudfoundry.feature  27_question_serverless_function.feature  28_question_eventing_subscription.feature  29_question_telemetry_tracing.feature  30_question_btp_service_binding.feature  31_question_keda_autoscaling.feature  32_question_kyma_cli_install.feature  33_question_dev_contribute_api_gateway.feature  34_question_dev_serverless_tests.feature  35_question_dev_eventing_architecture.feature  36_question_dev_lifecycle_manager.feature  37_question_dev_create_module.feature  38_question_dev_telemetry_pipeline.feature
tests/eval/results/: .gitignore  2026-04-12_15-54_consistency.md  2026-05-15_12-08_consistency.md  2026-05-15_14-15_consistency.md  no-mcp-report.md  with-mcp-report.md
tests/eval/src/: agent.py  judge.py  judge_model.py  models.py  rate_limiter.py  report.py  runner.py
tests/eval/templates/: report.html.j2
tests/eval/tests/: test_agent.py  test_judge.py  test_models.py  test_report.py  test_runner.py
tests/integration/indexing/: test_indexer.py
tests/integration/mcp/: test_rag_client.py
tests/unit/indexing/: test_fetcher.py  test_indexer.py
tests/unit/mcp/: test_config.py  test_server.py
